--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,27 +1,33 @@
 version: '3.8'
+
 services:
-  database:
-    image: postgres:14
+  postgres:
+    image: postgres:15
+    container_name: product_data_pipeline_db
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: productuser         
+      POSTGRES_PASSWORD: productpassword 
+      POSTGRES_DB: productdb
     ports:
-      - "54321:54321"
+      - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - ./app/src/main/resources/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
+      - postgres_data:/var/lib/postgresql/data
 
   app:
-    build: ./app
-    environment:
-      DB_HOST: database
-      DB_PORT: 54321
-      DB_NAME: mydatabase
-      DB_USER: postgres
-      DB_PASSWORD: postgres
+    build:
+      context: .
+      dockerfile: Dockerfile
     depends_on:
-      - database
+      - postgres
+    environment:
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: productdb
+      DB_USER: productuser
+      DB_PASSWORD: productpassword
     volumes:
-      - ./data:/data
+      - ./app/src/main/resources/smalldata.csv:/app/src/main/resources/smalldata.csv
+
 volumes:
-  postgres-data:
+  postgres_data:
