Enhanced brand name handling, trying to find a canonical form for all brands, removed the previous simple solution

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       DB_PASSWORD: productpassword
     volumes:
       - ./app/src/main/resources/data.csv:/app/src/main/resources/data.csv
+      #- ./app/src/main/resources/smalldata-UTF8-mergetest.csv:/app/src/main/resources/data.csv
 
 volumes:
   postgres_data:
